Fixed the middle align for Binary animation

--- a/CSS/loading.css
+++ b/CSS/loading.css
@@ -10,14 +10,21 @@ body {
   display: grid;
   grid-template-rows: 20px 20px;
   margin: 0 auto;
-  margin-left: 60px;
-  width: 75%;
+  /* margin-left: 25%; */
+  width: 100%!important;
   vertical-align: top;
+}
+.binary
+{
+  width: 100%;
+  /* margin-left: 20%; */
+  /* width: 130%; */
 }
 .binarylast
 {
-  margin-left: 50px;
-  width: 110%;
+  width: 100%;
+  /* margin-left: 50%; */
+  /* width: 130%; */
 }
 h2
 {
@@ -34,6 +41,7 @@ h2
 .b
 {
   color: orange;
+  /* width: 8.1em; */
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
   margin-right: 0 auto;
@@ -49,7 +57,10 @@ h2
   animation: name 0.5s;
   animation-fill-mode: forwards;
 }
-
+.name.k
+{
+  margin-left: 5em;
+}
 .i
 {
   animation-delay: 0.5s;
@@ -66,10 +77,12 @@ h2
   opacity: 0;
 }
 
-.c
+.name.c
 {
   animation-delay: 2s;
   opacity: 0;
+  margin-left: 8em;
+
 }
 .l
 {
@@ -94,11 +107,11 @@ h2
 /* The typing effect */
 @keyframes name {
   0% {opacity: 0;
-  width: 0px}
+  width: 0;}
   99% {opacity:0;
-  width: 0px}
+  width: 0;}
   100% {opacity: 1;
-  width: 12px;
+  width: 0.6em;
   }
 }
 @keyframes color {
@@ -109,7 +122,7 @@ h2
 @keyframes typing {
   0% { width: 0px;
   opacity: 1 }
-  50% { width: 110px }
+  50% { width: 4.4em }
   99% { opacity: 1 }
   100% { width: 0px;
   overflow: hidden;
